# rqalpha

./: .gitignore  README.md  generate_requirements.py  pyproject.toml  requirements.txt
rqalpha/: _version.py
rqalpha/data/: data_proxy.py
rqalpha/data/base_data_source/: data_source.py
rqalpha/mod/rqalpha_mod_sys_analyser/: mod.py
rqalpha/mod/rqalpha_mod_sys_simulation/: mod.py
tests/outs/: time.csv
