[project]
name = "rqalpha"
version = "5.5.666"
description = "RQAlpha5.5魔改版"
authors = [
    {name = "iori",email = "371803085@qq.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "click (>=7.0.0)",
    "filelock (>=3.18.0,<4.0.0)",
    "h5py (>=3.13.0,<4.0.0)",
    "jsonpickle (>=4.0.5,<5.0.0)",
    "logbook (>=1.8.1,<2.0.0)",
    "matplotlib (>=3.1.0)",
    "methodtools (>=0.4.7,<0.5.0)",
    "numpy (<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=1.0.5)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "rqrisk (>=1.0.6)",
    "simplejson (>=3.20.1,<4.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "toml (>=0.10.2,<0.11.0)"
 
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


